fix spacing for sidebar grid bloc kitems

--- a/scss/layout/_aside.scss
+++ b/scss/layout/_aside.scss
@@ -94,6 +94,14 @@
 			list-style-type: none;
 		}
 	}
+
+	ul[class*="-block-grid-"]{
+
+		> li{
+			padding-bottom: 5px;
+		}
+	}
+
 }
 
 
